--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="com.brotherd.broadcastdemo">
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -17,16 +16,11 @@
             </intent-filter>
         </activity>
 
-        <!--<receiver
-            android:name=".MyReceiver"
-            android:enabled="true"
-            android:exported="true">
-            &lt;!&ndash;指定优先级&ndash;&gt;
-            <intent-filter android:priority="100">
-                <action android:name="com.brotherd.broadcastdemo.BROADCAST" />
+        <receiver android:name=".MyReceiver2">
+            <intent-filter>
+                <action android:name="com.brotherd.broadcastdemo.BROADCAST_TWO" />
             </intent-filter>
-        </receiver>-->
-
+        </receiver>
     </application>
 
 </manifest>
